--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>AbgBalebona</title>
     <link href="https://fonts.googleapis.com/css?family=Raleway:200,300,400,500&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="css/estilos.css">
+    <link rel="stylesheet" href="estilos.css">
 </head>
 
 <body>
@@ -26,7 +26,7 @@
 
 
     <section class="wave-contenedor website">
-        <img src="img/Jessica.png" alt="Foto de Jessica" class="AbgJessica">
+        <img src="Jessica.png" alt="Foto de Jessica" class="AbgJessica">
         <div class="contenedor-textos-main">
             <h2 class="titulo left">¿Que es esto?</h2>
             <p class="parrafo">
@@ -56,13 +56,13 @@
                 <i class="Imagen"></i>
                 <h3>La violencia no es solo f&iacute;sica</h3><br>
                 <font class="contenido">En la actualidad existen aún muchas mujeres que consideran no ser víctimas de violencia, debido a que entienden como maltrato solo el hecho de ser golpeadas físicamente. Es por esta razón que cuando se les pregunta si han sufrido de algún tipo de agresión...</font>
-                <a href="Direcciones/Vionencia.html" class="cta">Leer mas</a>
+                <a href="Vionencia.html" class="cta">Leer mas</a>
             </article>
             <article class="card">
                 <i class="fas fa-database"></i>
                 <h3>En honor a la tribu</h3><br>
                 <font class="contenido">Discriminación", "sumisión" y "vulnerabilidad" son algunos de los términos que les pueden venir a la mente al momento de escuchar la frase "violencia contra la mujer", sin embargo hoy quiero contarte algo que hace eco en mi mente y que en lo particular cambia la...</font>
-                <a href="Direcciones/Tribu.html" class="cta">Leer mase</a>
+                <a href="Tribu.html" class="cta">Leer mase</a>
             </article>
             <article class="card">
                 <i class="far fa-object-group"></i>
@@ -90,7 +90,7 @@
                 </li>
                 <a href="" class="cta1">Leer mas</a>
             </div>
-            <img src="img/onu.png" alt="Foto del logo de la ONU" class="Onu">
+            <img src="onu.png" alt="Foto del logo de la ONU" class="Onu">
         </div>
 
     <div class="galeria" id="redes">
@@ -99,7 +99,7 @@
             <p class="comentario">te dar&eacute; consejos &uacute;tiles</p>
             <article class="galeria-cont">
                 <a href="https://www.instagram.com/abgbalebona/">
-                    <img class="instragram" src="img/Instagram.png" alt="Foto del logo de Instagram">
+                    <img class="instragram" src="Instagram.png" alt="Foto del logo de Instagram">
                 </a>
                 <!--<img src="img/facebook.jpg" alt="">--->
             </article>
@@ -126,6 +126,6 @@
         </div>
     </footer>-->
 </section>
-<script src="../js/JavaScript.js"></script>
+<script src="JavaScript.js"></script>
 </body>
 </html>
