--- a/Tribu.html
+++ b/Tribu.html
@@ -117,7 +117,7 @@ Jessica A. Balebona S..<br>
             <p class="comentario">te dar&eacute; consejos &uacute;tiles</p>
             <article class="galeria-cont">
                 <a href="https://www.instagram.com/abgbalebona/">
-                    <img src="../img/Instagram.png" alt="Foto del logo de Instagram">
+                    <img src="Instagram.png" alt="Foto del logo de Instagram">
                 </a>
                 <!--<img src="img/facebook.jpg" alt="">--->
             </article>
