--- a/Tribu.html
+++ b/Tribu.html
@@ -108,7 +108,7 @@ Jessica A. Balebona S..<br>
                 </li>
                 <a href="" class="cta1">Leer mas</a>
             </div>
-            <img src="../img/onu.png" alt="Foto del logo de la ONU" class="Onu">
+            <img src="onu.png" alt="Foto del logo de la ONU" class="Onu">
         </div>
 
     <div class="galeria" id="redes">
