--- a/Tribu.html
+++ b/Tribu.html
@@ -76,7 +76,7 @@ Jessica A. Balebona S..<br>
                 <font class="contenido">En la actualidad existen aún muchas mujeres que consideran no ser víctimas de violencia, debido a que entienden como maltrato solo el hecho de ser golpeadas físicamente. Es por esta razón que cuando se les pregunta si han sufrido de algún tipo de agresión...</font>
                 <a href="Vionencia.html" class="cta">Leer mas</a>
             </article>
-            <article class="card-selicionada">
+            <article class="card">
                 <i class="fas fa-database"></i>
                 <h3>En honor a la tribu</h3><br>
                 <font class="contenido">Discriminación", "sumisión" y "vulnerabilidad" son algunos de los términos que les pueden venir a la mente al momento de escuchar la frase "violencia contra la mujer", sin embargo hoy quiero contarte algo que hace eco en mi mente y que en lo particular cambia la...</font>
