--- a/Vionencia.html
+++ b/Vionencia.html
@@ -89,7 +89,7 @@
     <section class="cards contenedor">
         <h2 class="titulo">Eligue que quieres saber</h2>
         <div class="content-cards">
-            <article class="card" style="background: #4285f4ba;">
+            <article class="card">
                 <i class="Imagen"></i>
                 <h3>La violencia no es solo f&iacute;sica</h3><br>
                 <font class="contenido">En la actualidad existen aún muchas mujeres que consideran no ser víctimas de violencia, debido a que entienden como maltrato solo el hecho de ser golpeadas físicamente. Es por esta razón que cuando se les pregunta si han sufrido de algún tipo de agresión...</font>
