--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@
                 <li class="parrafo">
                     Compartir las cargas de trabajo del hogar, ONU mujeres: "Entre cocinar, limpiar, ir a buscar agua o leña o cuidar de las niñas, los niños y las personas mayores, las mujeres realizan al menos 2,5 veces más trabajo doméstico y de cuidado no remunerado que los hombres. Por tanto, tienen menos tiempo para dedicar al trabajo remunerado o trabajan más horas, combinando trabajos remunerados con otros que no lo son. El trabajo no remunerado de las mujeres sufraga el costo en cuidados que sustenta a las familias, apoya a las economías y a menudo suple las carencias en materia de servicios sociales" El hecho de que estés en casa no te impide mejorar y cultivar tu intelecto, puedes aprovechar ese tiempo para buscar tu empoderamiento.
                 </li>
-                <a href="" class="cta1">Leer mas</a>
+                <a href="Ten-en-mente-esto-siempre.html" class="cta1">Leer mas</a>
             </div>
             <img src="onu.png" alt="Foto del logo de la ONU" class="Onu">
         </div>
