--- a/Tribu.html
+++ b/Tribu.html
@@ -76,7 +76,7 @@ Jessica A. Balebona S..<br>
                 <font class="contenido">En la actualidad existen aún muchas mujeres que consideran no ser víctimas de violencia, debido a que entienden como maltrato solo el hecho de ser golpeadas físicamente. Es por esta razón que cuando se les pregunta si han sufrido de algún tipo de agresión...</font>
                 <a href="Vionencia.html" class="cta">Leer mas</a>
             </article>
-            <article class="card">
+            <article class="card" style="background: rgb(66, 133, 244, 1);">
                 <i class="fas fa-database"></i>
                 <h3>En honor a la tribu</h3><br>
                 <font class="contenido">Discriminación", "sumisión" y "vulnerabilidad" son algunos de los términos que les pueden venir a la mente al momento de escuchar la frase "violencia contra la mujer", sin embargo hoy quiero contarte algo que hace eco en mi mente y que en lo particular cambia la...</font>
@@ -106,7 +106,7 @@ Jessica A. Balebona S..<br>
                 <li class="parrafo">
                     Compartir las cargas de trabajo del hogar, ONU mujeres: "Entre cocinar, limpiar, ir a buscar agua o leña o cuidar de las niñas, los niños y las personas mayores, las mujeres realizan al menos 2,5 veces más trabajo doméstico y de cuidado no remunerado que los hombres. Por tanto, tienen menos tiempo para dedicar al trabajo remunerado o trabajan más horas, combinando trabajos remunerados con otros que no lo son. El trabajo no remunerado de las mujeres sufraga el costo en cuidados que sustenta a las familias, apoya a las economías y a menudo suple las carencias en materia de servicios sociales" El hecho de que estés en casa no te impide mejorar y cultivar tu intelecto, puedes aprovechar ese tiempo para buscar tu empoderamiento.
                 </li>
-                <a href="" class="cta1">Leer mas</a>
+                <a href="Ten-en-mente-esto-siempre.html" class="cta1">Leer mas</a>
             </div>
             <img src="onu.png" alt="Foto del logo de la ONU" class="Onu">
         </div>
